--- a/src/pages/gallery/gallery.scss
+++ b/src/pages/gallery/gallery.scss
@@ -2,7 +2,6 @@ page-gallery {
 
   ion-content {
     background-color: #2e2e2f !important;
-    //color: #FFFFFF !important;
 
     .card-md + ion-card {
       margin-top: 10px !important;
@@ -12,7 +11,6 @@ page-gallery {
       padding: 0 16px !important;
 
       ion-card-title {
-        //text-transform: uppercase;
         font-weight: 400;
       }
     }
@@ -20,8 +18,42 @@ page-gallery {
     .flex-container.height-full {
       max-width: 100%;
       height: 100%;
-      // max-height: calc(100vh - 64px - 96px);
-      max-height: calc(100vh - 64px - 24px);
+      max-height: calc(100vh - 64px - 22px);
+
+      .gallery {
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center center;
+        width: 100vw;
+        height: 100vh;
+        display: block;
+
+        &.one {
+          background-image: url('../assets/img/gallery/becker-lobby3.jpg');
+        }
+        &.two {
+          background-image: url('../assets/img/gallery/becker-co.jpg');
+        }
+        &.three {
+          background-image: url('../assets/img/gallery/perkins-conf1.jpg');
+        }
+        &.four {
+          background-image: url('../assets/img/gallery/perkins-stairs1.jpg');
+        }
+        &.five {
+          background-image: url('../assets/img/gallery/schwabe1.jpg');
+        }
+        &.six {
+          background-image: url('../assets/img/gallery/terrace2.jpg');
+        }
+        &.seven {
+          background-image: url('../assets/img/gallery/terrace3.jpg');
+        }
+        &.eight {
+          background-image: url('../assets/img/gallery/terrace1.jpg');
+        }
+
+      }
     }
 
     ion-grid ion-row ion-col ion-row ion-col {
