--- a/src/pages/floor-plans/floor-plans.scss
+++ b/src/pages/floor-plans/floor-plans.scss
@@ -68,7 +68,7 @@ page-floor-plans {
     }
 
     @include MQ(larger) {
-      left: -220px;
+      left: -280px;
       top:0px;
       position: absolute;
     }
@@ -197,11 +197,21 @@ page-floor-plans {
 
   .ste-container {
     display: inline-block;
-    background: white;
+    // background: white;
     float: right;
     padding: 0.3rem 0.6rem;
-    margin-left: 8px;
+    // margin-left: 8px;
     margin-bottom: 8px;
+
+    &.overlayer {
+
+      @media (min-width:1120px) and (max-width: 1400px) {
+        background: rgba(255,255,255,0.7);
+      }
+      @media (min-width:762px) and (max-width: 1060px) {
+        background: rgba(255,255,255,0.7);
+      }
+    }
 
     h2 {
       display: inline-block;
@@ -232,7 +242,7 @@ page-floor-plans {
     width: calc(100% + 290px);
     height: 57px;
     position: absolute;
-    opacity: 0.7;
+    opacity: 0.8;
     z-index: -2;
     left: -300px;
     margin-top: -13px;
