--- a/src/pages/future/future.scss
+++ b/src/pages/future/future.scss
@@ -27,6 +27,10 @@ page-future {
     height: 100%;
     max-height: calc(100vh - 86px);
 
+    // Override padding on grid and columns
+    // Push size to full height/width taking into account the bottom tabs
+    max-height: calc(100vh - 64px);
+
     .future {
       background-size: cover;
       background-repeat: no-repeat;
@@ -36,6 +40,10 @@ page-future {
       display: block;
 
       height: calc(100vh - 86px);
+
+      // Override padding on grid and columns
+      // Push size to full height/width taking into account the bottom tabs
+      height: calc(100vh - 64px);
 
       &.one {
         background-image: url('../assets/img/future/PacWest-Lobby_02-min.jpg');
@@ -118,6 +126,8 @@ page-future {
     display: block;
   }
 
+  ion-grid,
+  ion-grid ion-col,
   ion-grid ion-row ion-col ion-row ion-col {
     padding: 0 !important;
   }
