--- a/src/pages/gallery/gallery.scss
+++ b/src/pages/gallery/gallery.scss
@@ -20,6 +20,10 @@ page-gallery {
       height: 100%;
       max-height: calc(100vh - 64px - 22px);
 
+      // Override padding on grid and columns
+      // Push size to full height/width taking into account the bottom tabs
+      max-height: calc(100vh - 64px);
+
       .gallery {
         background-size: cover;
         background-repeat: no-repeat;
@@ -56,6 +60,8 @@ page-gallery {
       }
     }
 
+    ion-grid,
+    ion-grid ion-col,
     ion-grid ion-row ion-col ion-row ion-col {
       padding: 0 !important;
     }
