Fix Availabilities Bug and Updates
Fix bug on iOS that pushes bars on Availabilities page up/down and
keeps them from lining up with illustration.

Add StatusBar to change to black text on Home Screen — This is not
working at the moment.

Update Config

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -381,7 +381,7 @@ ion-footer {
 .ios.platform-mobileweb.platform-ios { //.platform-ios9
   .main-container ion-grid ion-row.row:before,
   .main-container ion-grid ion-row.row::before {
-    margin-top: 5px !important;
+    margin-top: -13px !important;
   }
 }
 
@@ -389,5 +389,18 @@ ion-footer {
   .main-container ion-grid ion-row.row:before,
   .main-container ion-grid ion-row.row::before {
     margin-top: -13px !important;
+  }
+}
+
+.ios, .platform-ios { // iOS Devices
+  .main-container ion-grid ion-row.row:before,
+  .main-container ion-grid ion-row.row::before {
+    margin-top: 4px !important;
+  }
+
+  .ste-container {
+    &.overlayer {
+      background: transparent !important;
+    }
   }
 }
