--- a/src/pages/location/location.scss
+++ b/src/pages/location/location.scss
@@ -37,7 +37,8 @@ page-location {
         left: calc(50% - 75px);
         font-family: "Raleway", "Roboto", "Helvitica Neue", sans-serif;
         text-transform: uppercase;
-        font-size: 15.625px;
+        // font-size: 15.625px;
+        font-size: 1.4rem;
         font-weight: 600;
         border: none;
         border-radius: 0;
@@ -95,7 +96,8 @@ page-location {
       .filter-group {
         text-transform: uppercase;
         font-family: "Raleway", "Roboto", "Helvitica Neue", sans-serif;
-        font-size: 15.625px;
+        // font-size: 15.625px;
+        font-size: 1.4rem;
         font-weight: 600;
 
         input[type=checkbox]:first-child + label,
@@ -113,10 +115,15 @@ page-location {
         input[type=radio]  {
           margin-left: 8px;
           margin-bottom: 0;
-          height: 16px;
+          height: 14px;
+          width: 14px;
           // vertical-align: text-top;
           // vertical-align: sub;
           display: inline-block;
+
+          height: 16px;
+          width: 16px;
+          // vertical-align: sub;
         }
 
         input[type=checkbox] + label,
@@ -125,7 +132,8 @@ page-location {
             cursor: pointer;
             padding: 10px 10px 10px 6px;
             margin: 0;
-            font-size: 15.625px;
+            // font-size: 15.625px;
+            font-size: 1.4rem;
             font-weight: 600;
             text-transform: uppercase;
 
