Update availabilities; new renderings; build-013
Update availabilities RSF and images.
Update future tab with new renderings and terrace floor plan renderings.
Pushed build-013 to testflight and browser build.

--- a/src/pages/future/future.scss
+++ b/src/pages/future/future.scss
@@ -69,6 +69,18 @@ page-future {
       &.eight {
         background-image: url('../assets/img/future/future-gallery-08-min.jpg');
       }
+      &.nine {
+        background-image: url('../assets/img/future/future-gallery-09-min.jpg');
+      }
+      &.ten {
+        background-image: url('../assets/img/future/future-gallery-10-min.jpg');
+      }
+      &.eleven {
+        background-image: url('../assets/img/future/future-gallery-11-min.jpg');
+      }
+      &.twelve {
+        background-image: url('../assets/img/future/future-gallery-12-min.jpg');
+      }
 
     }
 
